xidlc/tests/invalid/http_unary_query_template_missing_binding.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidQueryTemplateService {
    @get(path = "/users/{id}{?lang,region}")
    string get_user(
        @path("id") string id,
        @query("lang") string lang
    );
};
